src/msg/snapshots/tmi__msg__user_state__tests__parse_userstate.snap
---
source: src/msg/user_state.rs
expression: "f(\"@badge-info=;badges=;color=#FF0000;display-name=TESTUSER;emote-sets=0;mod=0;subscriber=0;user-type= :tmi.twitch.tv USERSTATE #randers\")"
---
UserState {
    channel: "#randers",
    user_name: "TESTUSER",
    badges: [],
    emote_sets: [
        "0",
    ],
    color: Some(
        "#FF0000",
    ),
}
